@@ -24,7 +24,7 @@
                     "plugin_params": "{\"time\"=>3, \"id\"=>\"e4e12a4e3082615c5427079bf4250dbfa338ebac10f8ea9912d7b98a14f56b8c\"}",
                     "plugin_type": "filters",
                     "took_in_millis": 3027,
-                    "took_in_nanos": 3027675140.0
+                    "took_in_nanos": 3027675106
                 }
             },
             "offset": 383,
